0.1-1	(under development)

0.1-0	2012-05-05
   o	initial CRAN release