@@ -1,4 +1,5 @@
 0.1-1	(under development)
+   o	RC.get() now performs get_slice with a list of columns
 
 0.1-0	2012-05-05
    o	initial CRAN release
